mobile menu fix

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
             <img src="images/logo.png" alt="" class="img-responsive">
           </div>
           <div class="col-xs-4 hidden-md hidden-lg">
-            <div class="hamburger">
+            <div class="hamburger hamburger--collapse">
               <div class="hamburger-box">
                 <div class="hamburger-inner"></div>
               </div>
@@ -45,11 +45,11 @@
           <div class="col-md-8">
             <nav>
               <ul>
-                <li><a href="#">Início</a></li>
-                <li><a href="#">Quem Somos</a></li>
-                <li><a href="#">Serviços</a></li>
-                <li><a href="#">Notícias</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="#"><img src="./images/icones/icon-home.png" alt="">Início</a></li>
+                <li><a href="#"><img src="./images/icones/quem-somos.png" alt="">Quem Somos</a></li>
+                <li><a href="#"><img src="./images/icones/servicos.png" alt="">Serviços</a></li>
+                <li><a href="#"><img src="./images/icones/noticias.png" alt="">Notícias</a></li>
+                <li><a href="#"><img src="./images/icones/contato.png" alt="">Contato</a></li>
               </ul>
             </nav>
           </div>
@@ -169,7 +169,7 @@
       </div>
     </footer>
     <div class="assinatura">
-      <p>Rodagro Transportes e Logística LTDA © 2017 <br>Todos os direitos reservados.</p>
+      <p>Lavoratta Comércio de Grãos LTDA © 2017 <br>Todos os direitos reservados.</p>
     </div>
 
     <!-- build:js scripts/vendor.js -->
