--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,7 @@
               <h2>Noticias em Destaque</h2>
               <ul>
                 <li class="noticia">
-                  <div class="noticia__imagem" style="background-image: url('./images/slide1.jpg');"></div>
+                  <div class="noticia__imagem" style="background-image: url('./images/noticia1.jpg');"></div>
                   <div class="noticia__content">
                     <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, non.</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, aut! Quam autem quia est ullam fugit modi aspernatur aliquam sequi?</p>
@@ -81,7 +81,7 @@
                   </div>
                 </li>
                 <li class="noticia">
-                  <div class="noticia__imagem" style="background-image: url('./images/slide1.jpg');"></div>
+                  <div class="noticia__imagem" style="background-image: url('./images/noticia2.jpg');"></div>
                   <div class="noticia__content">
                     <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, non.</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, aut! Quam autem quia est ullam fugit modi aspernatur aliquam sequi?</p>
@@ -90,7 +90,7 @@
                   </div>
                 </li>
                 <li class="noticia">
-                  <div class="noticia__imagem" style="background-image: url('./images/slide1.jpg');"></div>
+                  <div class="noticia__imagem" style="background-image: url('./images/noticia3.jpg');"></div>
                   <div class="noticia__content">
                     <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, non.</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, aut! Quam autem quia est ullam fugit modi aspernatur aliquam sequi?</p>
