--- a/app/quem-somos.html
+++ b/app/quem-somos.html
@@ -45,11 +45,11 @@
           <div class="col-md-8">
             <nav>
               <ul>
-                <li><a href="#"><img src="./images/icones/icon-home.png" alt="">Início</a></li>
-                <li><a href="#"><img src="./images/icones/quem-somos.png" alt="">Quem Somos</a></li>
-                <li><a href="#"><img src="./images/icones/servicos.png" alt="">Produtos</a></li>
-                <li><a href="#"><img src="./images/icones/noticias.png" alt="">Notícias</a></li>
-                <li><a href="#"><img src="./images/icones/contato.png" alt="">Contato</a></li>
+                <li><a href="index.html"><img src="./images/icones/icon-home.png" alt="">Início</a></li>
+                <li><a href="quem-somos.html"><img src="./images/icones/quem-somos.png" alt="">Quem Somos</a></li>
+                <li><a href="servicos.html"><img src="./images/icones/servicos.png" alt="">Serviços</a></li>
+                <li><a href="noticias.html"><img src="./images/icones/noticias.png" alt="">Notícias</a></li>
+                <li><a href="contato.html"><img src="./images/icones/contato.png" alt="">Contato</a></li>
               </ul>
             </nav>
           </div>
@@ -61,38 +61,29 @@
       <div class="container">
 
         <div class="banner">
-          <div style="background-image:  url(images/banner-produtos.jpg) "></div>
+          <div style="background-image:  url(images/quem-somos.png) "></div>
         </div>
 
         <div class="sobre">
           <h2>sobre nos</h2>
-
-          <h4>“Lorem ipsum dolor sit amet, consectetur adipiscing elit.”</h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget arcu eget nisl tempor porta vel a purus. Ut id erat enim. Donec nisl tellus, accumsan non enim a, suscipit tincidunt lorem. Sed hendrerit sagittis risus. Ut faucibus pellentesque quam nec ultrices. Mauris tempor et nisi et semper. Etiam elementum mi sed pellentesque luctus. Nullam semper dolor in turpis cursus, ac cursus sapien porttitor. In at magna a dui dapibus mattis mollis vel dui.
-            <br>
-            Integer in volutpat enim. Nam nunc sem, eleifend vitae porta ac, pharetra a nisi. Sed sit amet tristique purus. Morbi pretium tellus ut malesuada elementum. Ut sodales, justo quis rutrum congue, felis orci imperdiet lacus, a ultricies metus urna eu leo. Sed a dignissim leo, ac elementum orci.
+            A <b>LAVORATTA</b> atua na comercialização de grãos. Com visão empreendedora a empresa foi fundada com o objetivo de inovar e acompanhar os movimentos do mercado agrícola, cada dia mais dinâmico e desafiador.
+          </p>
+          <br>
+          <p>
+            A <b>LAVORATTA</b> conta com uma equipe experiente e com expertise adquirida ao longo dos anos no mercado de commodities agrícolas e que se mantém alerta as novidades do setor em nível nacional e internacional.
+          </p>
+          <br>
+          <p>
+            Com isso a <b>LAVORATTA</b> é garantia de excelência nos serviços prestados, oferecendo confiança e atendimento personalizado e diferenciado, que proporciona aos seus clientes informações de forma simples e rápida, o que favorece uma tomada de decisão qualificada na hora da comercialização.
           </p>
         </div>
-
-        <div class="nossos-parceiros">
-          <h2>Nossos Parceiros</h2>
-          <ul class="lista-parceiro">
-            <li><a href="#"><img src="" alt=""></a></li>
-            <li><a href="#"><img src="" alt=""></a></li>
-            <li><a href="#"><img src="" alt=""></a></li>
-            <li><a href="#"><img src="" alt=""></a></li>
-            <li><a href="#"><img src="" alt=""></a></li>
-            <li><a href="#"><img src="" alt=""></a></li>
-          </ul>
-        </div>
-
       </div>
     </section>
 
     <footer>
       <div class="container">
-        <div class="col-md-3 col-xs-12">
+        <div class="col-md-4 col-xs-12">
           <img src="images/logo-footer.png" alt="" class="logo-footer">
         </div>
         <div class="col-md-3 col-xs-12">
@@ -106,13 +97,16 @@
             </ul>
           </nav>
         </div>
-        <div class="col-md-6 col-xs-12">
+        <div class="col-md-5 col-xs-12">
           <p>
             FALE CONOSCO
-            <br>
-            Telefone: +55 53 3026 2826  -  Whatsapp: +55 53 99953 9436
-            <br>
-            Endereço: Rua Senador Mendonça, 120 - Conjunto 305
+          </p>
+          <br>
+          <p>
+            Telefone: <a href="+555330262826">+55 53 3026 2826</a>  -  Whatsapp: <a href="+5553999539436">+55 53 99953 9436</a>
+          </p>
+          <p>
+            Endereço: Rua Senador Mendonça, 120 - Conjunto 305 <br>
             Centro, Pelotas/RS  CEP: 96015-200
           </p>
         </div>
