--- a/app/contato.html
+++ b/app/contato.html
@@ -39,11 +39,11 @@
                <div class="col-md-8">
                   <nav>
                      <ul>
-                        <li><a href="#"><img src="./images/icones/icon-home.png" alt="">Início</a></li>
-                        <li><a href="#"><img src="./images/icones/quem-somos.png" alt="">Quem Somos</a></li>
-                        <li><a href="#"><img src="./images/icones/servicos.png" alt="">Produtos</a></li>
-                        <li><a href="#"><img src="./images/icones/noticias.png" alt="">Notícias</a></li>
-                        <li><a href="#"><img src="./images/icones/contato.png" alt="">Contato</a></li>
+                        <li><a href="index.html"><img src="./images/icones/icon-home.png" alt="">Início</a></li>
+                        <li><a href="quem-somos.html"><img src="./images/icones/quem-somos.png" alt="">Quem Somos</a></li>
+                        <li><a href="servicos.html"><img src="./images/icones/servicos.png" alt="">Serviços</a></li>
+                        <li><a href="noticias.html"><img src="./images/icones/noticias.png" alt="">Notícias</a></li>
+                        <li><a href="contato.html"><img src="./images/icones/contato.png" alt="">Contato</a></li>
                      </ul>
                   </nav>
                </div>
@@ -56,9 +56,9 @@
             <div class="col-lg-4 col-xs-12">
                <h2>Atendimento</h2>
                <ul class="contato-lista">
-               <li><i class="fa fa-phone"></i>+55 53 3026 2826</li>
-               <li><i class="fa fa-whatsapp"></i>+55 53 99953 9436</li>
-               <li><i class="fa fa-envelope"></i><a href="javascript:;">contato@lavoratta.com.br</a></li>
+                  <li><i class="fa fa-phone"></i>+55 53 3026 2826</li>
+                  <li><i class="fa fa-whatsapp"></i>+55 53 99953 9436</li>
+                  <li><i class="fa fa-envelope"></i><a href="javascript:;">contato@lavoratta.com.br</a></li>
                </ul>
                <h2>Envie Sua Mensagem</h2>
                <form action="post-contato" method="POST" name="formContato">
@@ -74,7 +74,7 @@
                 Rua Senador Mendonça, 120 - Conjunto 305 <br>
                 Centro, Pelotas/RS  CEP: 96015-200
                </p>
-               <a href="https://www.google.com.br/maps/place/R.+Pirap%C3%B3,+1400+-+Igara,+Canoas+-+RS/@-29.8904798,-51.1733981,17z/data=!4m5!3m4!1s0x95196ff150c49249:0xc7281384b3f79a39!8m2!3d-29.8901915!4d-51.1736878?hl=pt-BR" target="blank"><img src="./images/mapa.png" alt="" class="img-responsive"></a>
+               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3392.2954791271695!2d-52.34413968430889!3d-31.76242598129028!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9511b598c56b0609%3A0xb5fa625319b5411d!2sR.+Sen.+Mendon%C3%A7a%2C+120+-+305+-+Centro%2C+Pelotas+-+RS%2C+96015-200!5e0!3m2!1spt-BR!2sbr!4v1504534661126" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
          </div>
       </section>
