--- a/app/index.html
+++ b/app/index.html
@@ -45,11 +45,11 @@
           <div class="col-md-8">
             <nav>
               <ul>
-                <li><a href="#"><img src="./images/icones/icon-home.png" alt="">Início</a></li>
-                <li><a href="#"><img src="./images/icones/quem-somos.png" alt="">Quem Somos</a></li>
-                <li><a href="#"><img src="./images/icones/servicos.png" alt="">Serviços</a></li>
-                <li><a href="#"><img src="./images/icones/noticias.png" alt="">Notícias</a></li>
-                <li><a href="#"><img src="./images/icones/contato.png" alt="">Contato</a></li>
+                <li><a href="index.html"><img src="./images/icones/icon-home.png" alt="">Início</a></li>
+                <li><a href="quem-somos.html"><img src="./images/icones/quem-somos.png" alt="">Quem Somos</a></li>
+                <li><a href="servicos.html"><img src="./images/icones/servicos.png" alt="">Serviços</a></li>
+                <li><a href="noticias.html"><img src="./images/icones/noticias.png" alt="">Notícias</a></li>
+                <li><a href="contato.html"><img src="./images/icones/contato.png" alt="">Contato</a></li>
               </ul>
             </nav>
           </div>
@@ -59,7 +59,13 @@
 
     <main class="banners">
       <div class="slider">
-        <div style="background-image: url('./images/slide1.jpg');">
+        <div style="background-image: url('./images/slide1.png');">
+
+        </div>
+        <div style="background-image: url('./images/slide2.png');">
+
+        </div>
+          <div style="background-image: url('./images/slide3.png');">
 
         </div>
       </div>
@@ -176,6 +182,7 @@
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/modernizr/modernizr.js"></script>
+    <script src="/bower_components/slick-carousel/slick/slick.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
