--- a/app/produtos.html
+++ b/app/produtos.html
@@ -47,8 +47,8 @@
               <ul>
                 <li><a href="index.html"><img src="./images/icones/icon-home.png" alt="">Início</a></li>
                 <li><a href="quem-somos.html"><img src="./images/icones/quem-somos.png" alt="">Quem Somos</a></li>
-                <li><a href="servicos.html"><img src="./images/icones/servicos.png" alt="">Serviços</a></li>
-                <li><a href="noticias.html"><img src="./images/icones/noticias.png" alt="">Notícias</a></li>
+                <li><a href="produtos.html"><img src="./images/icones/servicos.png" alt="">Produtos</a></li>
+                <!-- <li><a href="noticias.html"><img src="./images/icones/noticias.png" alt="">Notícias</a></li> -->
                 <li><a href="contato.html"><img src="./images/icones/contato.png" alt="">Contato</a></li>
               </ul>
             </nav>
@@ -61,11 +61,11 @@
       <div class="container">
 
         <div class="banner">
-          <div style="background-image:  url(images/banner-produtos.jpg) "></div>
+          <div style="background-image:  url(images/Produtos.jpg) "></div>
         </div>
 
         <div class="conheca">
-          <h2>conheça os nossos produtos e serviços</h2>
+          <h2>conheça os nossos produtos</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget arcu eget nisl tempor porta vel a purus. Ut id erat enim. Donec nisl tellus, accumsan non enim a, suscipit tincidunt lorem. Sed hendrerit sagittis risus. Ut faucibus pellentesque quam nec ultrices. Mauris tempor et nisi et semper. Etiam elementum mi sed pellentesque luctus. Nullam semper dolor in turpis cursus, ac cursus sapien porttitor. In at magna a dui dapibus mattis mollis vel dui.
             <br>
@@ -79,10 +79,13 @@
             <h3>arroz</h3>
             <div class="row">
               <div class="col-md-3 col-xs-12">
-                <img src="images/produto-arroz.jpg" alt="">
+                <img src="images/arroz.jpg" alt="">
               </div>
               <div class="col-md-9 col-xs-12">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est totam numquam corporis, ipsa error, atque sequi pariatur dolorum unde, laboriosam ea et quae minima nisi nostrum in doloribus voluptas molestias reiciendis quaerat officia debitis fugiat sunt! Suscipit voluptatibus velit, neque natus soluta blanditiis vitae, optio vero perspiciatis adipisci ipsam voluptatum in maxime corporis earum obcaecati debitis minima ad unde sapiente? Beatae velit aliquid consequuntur, assumenda vitae repellendus magni corporis tempora quidem sapiente fuga porro saepe cupiditate similique rem rerum facere cum, itaque perspiciatis. Illum, sequi, quasi. Quasi eos aliquam iusto quam, molestiae iste atque illum. Similique ad obcaecati delectus ducimus.
+                <p>
+                  O arroz alimenta mais da metade de população humana do mundo. É um alimento rico em carboidrato que tem como benefício para saúde o fornecimento de energia que pode ser gasta rápida, mas contém também proteínas, vitaminas e minerais essenciais ao organismo.
+                </p>
+                <a href="javascript:;" class="btn">Leia Mais</a>
               </div>
             </div>
           </div>
@@ -90,15 +93,18 @@
             <h3>Soja</h3>
             <div class="row">
               <div class="col-md-3 col-xs-12">
-                <img src="images/produto-soja.jpg" alt="">
+                <img src="images/soja.jpg" alt="">
               </div>
               <div class="col-md-9 col-xs-12">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est totam numquam corporis, ipsa error, atque sequi pariatur dolorum unde, laboriosam ea et quae minima nisi nostrum in doloribus voluptas molestias reiciendis quaerat officia debitis fugiat sunt! Suscipit voluptatibus velit, neque natus soluta blanditiis vitae, optio vero perspiciatis adipisci ipsam voluptatum in maxime corporis earum obcaecati debitis minima ad unde sapiente? Beatae velit aliquid consequuntur, assumenda vitae repellendus magni corporis tempora quidem sapiente fuga porro saepe cupiditate similique rem rerum facere cum, itaque perspiciatis. Illum, sequi, quasi. Quasi eos aliquam iusto quam, molestiae iste atque illum. Similique ad obcaecati delectus ducimus.
+                <p>
+                  A soja é um grão rico em proteínas cujo cultivo começou na Ásia há mais de cinco mil anos. A soja proporciona diversos benefícios para a saúde. Além de proteínas ele também é rica em fibras, o grão auxilia ainda na redução dos níveis do colesterol e ajuda a elevar os níveis o colesterol bom, possui Isoflavona que auxilia no equilíbrio hormonal e protege a saúde dos ossos.
+                </p>
+                <a href="javascript:;" class="btn">Leia Mais</a>
               </div>
             </div>
           </div>
         </div>
-        <div class="nossos-servicos">
+        <!-- <div class="nossos-servicos">
           <h2 class="bar bar-servicos">serviços</h2>
           <div class="content__item">
             <h3>exportação</h3>
@@ -111,7 +117,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 
