--- a/app/quem-somos.html
+++ b/app/quem-somos.html
@@ -47,8 +47,8 @@
               <ul>
                 <li><a href="index.html"><img src="./images/icones/icon-home.png" alt="">Início</a></li>
                 <li><a href="quem-somos.html"><img src="./images/icones/quem-somos.png" alt="">Quem Somos</a></li>
-                <li><a href="servicos.html"><img src="./images/icones/servicos.png" alt="">Serviços</a></li>
-                <li><a href="noticias.html"><img src="./images/icones/noticias.png" alt="">Notícias</a></li>
+                <li><a href="produtos.html"><img src="./images/icones/servicos.png" alt="">Produtos</a></li>
+                <!-- <li><a href="noticias.html"><img src="./images/icones/noticias.png" alt="">Notícias</a></li> -->
                 <li><a href="contato.html"><img src="./images/icones/contato.png" alt="">Contato</a></li>
               </ul>
             </nav>
